Fixed alignment for footer nav pane

--- a/static/css/less/mixins.less
+++ b/static/css/less/mixins.less
@@ -82,3 +82,8 @@
 .inline {
     display: inline;
 }
+
+.centered {
+    margin: 0 auto;
+    width: 90%;
+}
